--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@ body {
 /* headings, logo and text */
 
 .heading {
-    /* margin: 2.5rem auto; */
     color: rgba(230,236,240);
 }
 
@@ -23,15 +22,20 @@ h1 {
     font-size: 2.5rem;
 }
 
-span {
+#span-heading {
     text-align: center;
     font-size: 1.9rem;
     position: absolute;
     left: 20%;
     right: 20%;
-    /* top: 12%; */
     top: 10%;
     background: rgb(0,0,0);
+}
+
+#span-score {
+    background: rgb(187 148 133 / 60%);
+    padding: 0 1rem;
+    text-transform: uppercase;
 }
 
 h2 {
@@ -39,11 +43,30 @@ h2 {
     margin-bottom: 2rem;
 }
 
+#score {
+    color: rgb(255,210,0);
+    text-shadow: -1.5px 1px 1px rgb(0,0,0);
+    font-weight: bold;
+    letter-spacing: 0.3rem;
+    margin-bottom: 0.6rem;
+}
+
+#finalScore {
+    color: rgb(255,210,0);
+    text-shadow: -1.5px 1px 1px rgb(0,0,0);
+    font-weight: bold;
+    letter-spacing: 0.3rem;
+}
+
+#question {
+    font-size: 1.4rem;
+    margin-bottom: 1.8rem;
+}
+
 .logo {
     height: 220px;
+    width: 220px;
     cursor: pointer;
-    /* padding-right: 5px; */
-    /* vertical-align: middle; */
     border-radius: 50%;
     box-shadow: -8px 0px 3rem 8px rgb(187 148 133);
 }
@@ -57,6 +80,11 @@ h2 {
     font-size: 0.8rem;
 }
 
+#end-text {
+    font-size: 1.8rem;
+    margin-bottom: 0;
+}
+
 /* game containers */
 
 .game-area {
@@ -64,15 +92,11 @@ h2 {
     border-radius: 6px;
     box-sizing: border-box;
     width: 85%;
-    height: auto;
     max-width: 830px;
     margin-top: 40px;
     margin-left: auto;
     margin-right: auto;
     padding: 1rem;
-    /*centres game-area perfectly, tweak overlapping/hiding content (heading, maybe more stuff?)*/
-    /*toggle this on/off and tweak above margins if necessary*/
-    /* https://stackoverflow.com/questions/42121150/css-centering-with-transform */
     position: absolute;
     top: 60%;
     right: 50%;
@@ -82,10 +106,11 @@ h2 {
 .container {
     width: 85%;
     margin: auto;
-    /* padding: 25px 0; */
+    position: relative;
 }
 
-/*these are containers/buttons the answers will populate*/
+/* answers */
+
 .choice-container {
     background-color: rgb(239, 239, 239);
     display: flex;
@@ -102,15 +127,13 @@ h2 {
 .choice-container:hover {
     cursor: pointer;
     box-shadow: 3px 7px 16px 5px rgb(187 148 133 / 60%);
-    transform: scale(1.02);
-    transform: transform 100ms;
+    transition: transform 150ms;
+    transform: scale(1.03);
 }
 
 .controls-area {
     width: 85%;
     margin: 0px auto;
-    display: grid;
-    justify-content: center;
 }
 
 .hide {
@@ -120,11 +143,13 @@ h2 {
 /* buttons */
 
 .btn {
+    background-color: rgba(230,236,240, .95);
     width: 380px;
+    max-width: 100%;
     height: 60px;
     text-transform: uppercase;
     letter-spacing: 1.2px;
-    margin: 0.8rem;
+    margin: 0.8rem 0;
     text-align: center;
 }
 
@@ -149,7 +174,6 @@ h2 {
     background: rgb(255,0,0);
 }
 
-/* style by BrainCodex, changed to suit my game*/
 #highscore-btn:hover {
     background: rgb(255,210,0);
     box-shadow: 3px 7px 16px 5px rgba(255, 255, 0, 50%);
@@ -158,26 +182,21 @@ h2 {
 /* HUD */
 
 #hud {
-    /* display: flex; */
     justify-content: space-between;
 }
 
-.hud-prefix {
+#progressCounter {
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     color: rgb(0,0,0);
     text-align: center;
-}
-
-.hud-main-text {
-    text-align: center;
+    margin-bottom: 0.2rem;
 }
 
 #progressBar {
-    /* width: 10rem; */
     height: 1.5rem;
     border: 0.15rem solid rgb(0,0,0);
-    margin-top: 0.8rem;
+    margin-top: 0.5rem;
     border-radius: 50px;
     overflow: hidden;
 }
@@ -209,14 +228,13 @@ h2 {
     justify-content: center;
 }
 
-/*contact list*/
+/* contact list */
 
 .contact-list {
     list-style-type: none;
     display: flex;
     letter-spacing: 3.5rem;
     justify-content: center;
-    /*need to clean up auto margin from lit-style/padding*/
 }
 
 .contact-list i {
@@ -229,27 +247,19 @@ h2 {
     font-size: 2.5rem;
 }
 
-/*high scores*/
+/* high scores */
 
 #highScoresList {
-    list-style: none;
     margin-bottom: 1rem;
+    padding: 0;
 }
 
-/*adjust style or remove this class and default to <p> styling?*/
 .high-score {
     font-size: 1.2rem;
     margin-bottom: 0.5rem;
 }
 
-/*end.html*/
-
-#score, #finalScore {
-    color: rgb(255,210,0);
-    text-shadow: -1.5px 1px 1px rgb(0,0,0);
-    font-weight: bold;
-    letter-spacing: 0.5rem;
-}
+/* end.html */
 
 .end-form-container {
     width: 100%;
@@ -262,8 +272,8 @@ h2 {
 input {
     margin-bottom: 1rem;
     width: 20rem;
-    padding: 1.5rem;
-    font-size: 1.8rem;
+    padding: 1.2rem;
+    font-size: 1.4rem;
     border: none;
     box-shadow: 0 0.4rem 1.4rem 0 rgba(187,148,133, 0.6);
 }
@@ -273,113 +283,50 @@ input::placeholder {
 }
 
 #username {
-    margin-bottom: 3rem;
+    margin-bottom: 1.5rem;
     width: 100%;
     outline: none;
 }
 
-/*media queries*/
+/* media queries */
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 481px) {
     .logo {
-        height: 120px;
+        height: 180px;
+        width: 180px;
+        cursor: pointer;
     }
-    span {
-        font-size: 0.8rem;
+    #span-heading {
+        font-size: 1.4rem;
         top: 8%;
     }
     h2 {
-        font-size: 1.2rem;
-        margin-bottom: 0.8rem;
+        font-size: 1.4rem;
+        margin-bottom: 2rem;
     }
-    .hud-prefix {
-        font-size: 1.1rem;
+    #question {
+        font-size: 1.4rem;
+        margin-bottom: 1.8rem;
     }
     .game-area {
-        top: 70%;
-    }
-    .btn {
-        width: 200px;
+        top: 65%;
     }
     .choice-container {
-        width: 80%;
-    }
-    .controls-area {
-        display: block;
-    }
-    #username {
-        margin-bottom: 0.8rem;
-        width: 70%;
-    }
-}
-
-@media only screen and (max-width: 481px) {
-    span {
-        font-size: 1rem;
-        top: 9%;
-    }
-    h2 {
-        font-size: 1.4rem;
-        margin-bottom: 1rem;
-    }
-    .hud-prefix {
-        font-size: 1.3rem;
-    }
-    .btn {
-        width: 250px;
-    }
-    .choice-container {
-        width: 85%;
-    }
-    .controls-area {
-        display: block;
+        width: 90%;
     }
     #end-text {
-    font-size: 1.4rem;
+        font-size: 1.6rem;
     }
-    #username {
-        margin-bottom: 1rem;
-        width: 75%;
+    .contact-list {
+        letter-spacing: 0;
+        padding: 0;
+        display: block;
     }
-}
-
-@media only screen and (max-width: 769px) {
-    .logo {
-        height: 180px;
+    .contact-list i {
+        font-size: 3rem;
+        margin: 0.5rem;
     }
-    span {
-        font-size: 1.5rem;
-        top: 10%;
-    }
-    h2 {
-        font-size: 1.5rem;
-        margin-bottom: 1rem;
-    }
-    .hud-prefix {
-        font-size: 1.4rem;
-    }
-    #username {
-        margin-bottom: 1.5rem;
-    }
-    input {
-        padding: 1.2rem;
-        font-size: 1.2rem;
-    }
-}
-
-@media only screen and (max-width: 1025px) {
-    .logo {
-        height: 200px;
-    }
-    span {
-        font-size: 1.7rem;
-        top: 10%;
-    }
-    h2 {
-        font-size: 1.7rem;
-        margin-bottom: 1rem;
-    }
-    .hud-prefix {
-        font-size: 1.4rem;
+    .contact-list i:hover {
+        font-size: 4.2rem;
     }
 }
