--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ h2 {
     min-width: 65%;
     text-transform: uppercase;
     text-align: center;
-    border: 1px solid;
+    border: 1px solid black;
 }
 
 .choice-container:hover {
@@ -143,7 +143,7 @@ h2 {
 /* buttons */
 
 .btn {
-    background-color: rgba(230,236,240, .95);
+    background-color: rgb(239, 239, 239);
     width: 380px;
     max-width: 100%;
     height: 60px;
@@ -151,6 +151,7 @@ h2 {
     letter-spacing: 1.2px;
     margin: 0.8rem 0;
     text-align: center;
+    border: 1px solid black;
 }
 
 .btn:hover {
