--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,8 @@ body {
 
 .heading {
     color: rgba(230,236,240);
+    overflow: visible;
+    position: relative;
 }
 
 h1 {
@@ -28,7 +30,7 @@ h1 {
     position: absolute;
     left: 20%;
     right: 20%;
-    top: 10%;
+    top: 22%;
     background: rgb(0,0,0);
 }
 
@@ -91,16 +93,13 @@ h2 {
     background-color: rgba(230,236,240, .95);
     border-radius: 6px;
     box-sizing: border-box;
-    width: 85%;
+    width: 90%;
     max-width: 830px;
-    margin-top: 40px;
     margin-left: auto;
     margin-right: auto;
     padding: 1rem;
-    position: absolute;
-    top: 60%;
-    right: 50%;
-    transform: translate(50%,-50%);
+    position: relative;
+    margin-bottom: 5%;
 }
 
 .container {
@@ -151,6 +150,7 @@ h2 {
     letter-spacing: 1.2px;
     margin: 0.8rem 0;
     text-align: center;
+    border-radius: 6px;
     border: 1px solid black;
 }
 
@@ -299,7 +299,6 @@ input::placeholder {
     }
     #span-heading {
         font-size: 1.4rem;
-        top: 8%;
     }
     h2 {
         font-size: 1.4rem;
@@ -308,9 +307,6 @@ input::placeholder {
     #question {
         font-size: 1.4rem;
         margin-bottom: 1.8rem;
-    }
-    .game-area {
-        top: 65%;
     }
     .choice-container {
         width: 90%;
